# musical-baboon

./: CMakeLists.txt  Makefile  README.md  StrategyFinder.cpp  StrategyFinder.h  a.out  main.cpp  test.txt
trade_problem_generator/: StrategyFinder.cpp  StrategyFinder.h  TradeProblemGenerator.cpp  TradeProblemGenerator.h
